ros2_ws/log/build_2024-11-16_17-06-19/drone_home/stderr.log
  File "/home/pi/drone-home/ros2_ws/install/drone_home/lib/python3.12/site-packages/drone_home/controller.py", line 56
    if current_quaternion == Quaternion(x=0.0, y=0.0, z=0.0, w=0.0) or current_position.latitude = -1.0: # TODO add check for GPS later
                                                                                                 ^
SyntaxError: invalid syntax

